# SOLL

./: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  .gitmodules  .lgtm.yml  CMakeLists.txt  Changelog.md  LICENSE.spdx  README.md
.github/scripts/: clang-format.sh
.github/workflows/: build.yml  docker.yml  linter.yml
doc/: KnownIssues.md
doc/examples/: 0-0-4.yul  0-0-6.sol  0-0-6.yul
doc/examples/features/: builtinTest.sol  exp.wasm  fib.wasm  matrix.wasm  struct.sol  struct.wasm  warshall.wasm
doc/guides/: DevGuide.md  EwasmTestNetDeprecated.md  FeatureGuideForSolidity.md  FeatureGuideForYul.md
docs/examples/: 0-0-2.sol
docs/examples/features/: builtinTest.wasm  exp.sol  power.sol  power.wasm  statements.sol  statements.wasm  string.sol  string.wasm  warshall.sol
docs/guides/: DevGuide.md  FeatureGuideForSolidity.md  FeatureGuideForYul.md
example/uniswap-v2/: Makefile  README.md  UniswapV2ERC20.yul  UniswapV2Factory.yul  UniswapV2Pair.yul  evmc.py  uniswap-test.py
example/uniswap-v2/contracts/: UniswapV2ERC20.sol  UniswapV2Factory.sol  UniswapV2Pair.sol
include/soll/ADT/: STLExtras.h
include/soll/AST/: AST.h  ASTBase.h  ASTConsumer.h  ASTContext.h  ASTForward.h  ASTPrinter.h  Decl.h  DeclAsm.h  DeclVisitor.h  DeclYul.h  Expr.h  ExprAsm.h  ExprYul.h  OperationKinds.h  RecursiveASTVisitor.h  Stmt.h  StmtAsm.h  StmtVisitor.h  StmtYul.h  Type.h  TypePtr.h
include/soll/Basic/: AllDiagnostics.h  CharInfo.h  CodeGenOptions.h  Diagnostic.h  DiagnosticCodeGen.h  DiagnosticCodeGenKinds.inc  DiagnosticCommonKinds.inc  DiagnosticDriver.h  DiagnosticDriverKinds.inc  DiagnosticFrontend.h  DiagnosticFrontendKinds.inc  DiagnosticIDs.h  DiagnosticLex.h  DiagnosticLexKinds.inc  DiagnosticOptions.h  DiagnosticParse.h  DiagnosticParseKinds.inc  DiagnosticSema.h  DiagnosticSemaKinds.inc  FileManager.h  FileSystemOptions.h  IdentifierTable.h  OperatorPrecedence.h  SourceLocation.h  SourceManager.h  TargetOptions.h  TokenKinds.def  TokenKinds.h
include/soll/CodeGen/: BackendUtil.h  CodeGenAction.h  FuncBodyCodeGen.h  LoweringInteger.h  (+1 more)
lib/: CMakeLists.txt
lib/AST/: ASTConsumer.cpp  ASTContext.cpp  ASTPrinter.cpp  CMakeLists.txt  Decl.cpp  DeclAccept.cpp  DeclAsm.cpp  DeclVisitor.cpp  DeclYul.cpp  Expr.cpp  ExprAsm.cpp  ExprYul.cpp  Stmt.cpp  StmtAccept.cpp  StmtAsm.cpp  StmtVisitor.cpp  StmtYul.cpp  Type.cpp  TypePtr.cpp
lib/Basic/: CMakeLists.txt  Diagnostic.cpp  DiagnosticIDs.cpp  FileManager.cpp  IdentifierTable.cpp  OperatorPrecedence.cpp  SourceLocation.cpp  SourceManager.cpp  TokenKinds.cpp
lib/CodeGen/: ABICodec.cpp  ABICodec.h  BackendUtil.cpp  CGExpr.cpp  CGValue.h  CMakeLists.txt  CodeGenAction.cpp  CodeGenFunction.cpp  CodeGenFunction.h  CodeGenModule.cpp  CodeGenModule.h  CodeGenTypeCache.h  ExprEmitter.cpp  ExprEmitter.h  FuncBodyCodeGen.cpp  LoweringInteger.cpp  ModuleBuilder.cpp
lib/Frontend/: ASTConsumers.cpp  CMakeLists.txt  CompilerInstance.cpp  CompilerInvocation.cpp  DiagnosticRenderer.cpp  FrontendAction.cpp  FrontendActions.cpp  TextDiagnostic.cpp  TextDiagnosticPrinter.cpp
lib/Frontend/ASTConsumers/: ABIPrinter.cpp  ASTPrinter.cpp  FuncSigPrinter.cpp
lib/FrontendTool/: CMakeLists.txt  ExecuteCompilerInvocation.cpp
lib/Lex/: CMakeLists.txt  Lexer.cpp
lib/Parse/: CMakeLists.txt  ParseAST.cpp  ParseAsm.cpp  ParseLiteral.cpp  ParseYul.cpp  Parser.cpp
lib/Sema/: BreakableVisitor.cpp  CMakeLists.txt  ReferenceResolver.cpp  Scope.cpp  Sema.cpp  SemaExprAsm.cpp  SemaExprYul.cpp  SemaNameAndTypeResolver.cpp  SemaResolveIdentifier.cpp  SemaResolveImmutable.cpp  SemaResolveInherit.cpp  SemaResolveNameAndType.cpp  SemaResolveScope.cpp  SemaResolveType.cpp  SemaResolveUniqueName.cpp
test/: CMakeLists.txt  README.md  lit.cfg.py  lit.site.cfg.py.in
test/benchmark/: fib.sol  matrix.sol  power.sol  warshall.sol
test/release/: 0-0-1.sol  0-0-2.sol
test/solidity/: Library.sol  builtinTest.sol  constructor.sol  constructorWithArgs.sol  eei.sol  event.sol  helloWorld.sol  math.sol  multiContract.sol  string.sol  stringCompare.sol
test/soll-runtime-test/: compile.sh  libyul  runtest.sh  soll-runtime-test.py  utils.py  yul
test/yul/: address.yul  alias.yul  codesize.yul  ecrecover.yul  factorial.yul  feature.yul  fib.yul  immutable.yul  linkersymbol.yul  memory.yul  metadata.yul  specified_type.yul  subobject_access.yul  switch.yul  tuple.yul
tools/: CMakeLists.txt
tools/IndexAccess/: CMakeLists.txt  main.cpp
tools/astdump/: CMakeLists.txt  main.cpp
tools/astprint/: CMakeLists.txt  main.cpp
tools/expr_testcase/: CMakeLists.txt  main.cpp
tools/funcbodycodegen/: CMakeLists.txt  main.cpp
tools/soll/: CMakeLists.txt  main.cpp
tools/stmtcodegen/: CMakeLists.txt  main.cpp
unittests/: CMakeLists.txt  main.cpp
unittests/AST/: ExprTest.cpp
unittests/Basic/: CharInfoTest.cpp
unittests/CodeGen/: CodeGenActionTest.cpp
utils/: CMakeLists.txt  compile  compile_yul  ll2ewasm_sol  ll2ewasm_yul
utils/SHA-3/: CMakeLists.txt  CommandParser.cpp  CommandParser.h  Endian.h  HashFunction.cpp  HashFunction.h  Hex.h  Keccak.cpp  Keccak.h  Keccak.vcxproj  Keccak.vcxproj.filters  Makefile  ParserCommon.h  RAII_Wrapper.h  README  Rotation.h  stdafx.cpp  stdafx.h  targetver.h
utils/json/: json.hpp
utils/unittests/: catch.hpp
(+653 files in other folders)
