# SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception
add_library(sollFrontend
  ASTConsumers.cpp
  CompilerInstance.cpp
  CompilerInvocation.cpp
  DiagnosticRenderer.cpp
  FrontendAction.cpp
  FrontendActions.cpp
  TextDiagnostic.cpp
  TextDiagnosticPrinter.cpp
  )
target_link_libraries(sollFrontend
  sollAST
  sollBasic
  sollLex
  sollParse
  sollSema
  sollCodeGen
  )
